# src/main/java/com/company/oa/dto/SysDocumentDTO.java
@@ -1,0 +1,12 @@
+package com.company.oa.dto;
+
+import lombok.Data;
+
+import javax.validation.constraints.NotBlank;
+
+@Data
+public class SysDocumentDTO {
+    @NotBlank
+    private String title;
+    private String description;
+}
